--- a/guli-framework-parent/pom.xml
+++ b/guli-framework-parent/pom.xml
@@ -26,6 +26,7 @@
         <poi.version>3.9</poi.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
+        <commons-lang3.version>3.6</commons-lang3.version>
         <httpclient.version>4.5.1</httpclient.version>
         <gson.version>2.8.2</gson.version>
         <jwt.version>0.7.0</jwt.version>
@@ -35,6 +36,8 @@
         <aliyun-sdk-vod-upload.version>1.4.5</aliyun-sdk-vod-upload.version>
         <fastjson.version>1.2.28</fastjson.version>
         <json.version>20170516</json.version>
+        <!-- httpclient -->
+        <httpclient.version>4.5.3</httpclient.version>
     </properties>
 
     <dependencyManagement>
@@ -46,6 +49,15 @@
                 <artifactId>guli-framework-common</artifactId>
                 <version>${guli.version}</version>
             </dependency>
+
+            <!-- httpclient -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+
+
 
             <!--mybatis-plus 持久层-->
             <dependency>
@@ -106,6 +118,12 @@
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
                 <version>${commons-fileupload.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
 
             <!--Spring Cloud-->
